[workspace]
members = [
    "patterns/*/anchor",
    "patterns/*/tests",
]
resolver = "2"

# Pin blake3 to avoid edition 2024 incompatibility with Solana Platform Tools' Cargo 1.84
[workspace.dependencies]
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
