[package]
name = "missing-owner"
version = "0.1.0"
description = "Security Pattern: Missing Owner Check — Demonstrates the Wormhole-style vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "missing_owner"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
blake3 = "=1.5.5"
