[package]
name = "integer-overflow"
version = "0.1.0"
description = "Security Pattern: Integer Overflow/Underflow — Demonstrates unsafe arithmetic"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "integer_overflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
blake3 = "=1.5.5"
