[package]
name = "pda-bump"
version = "0.1.0"
description = "Security Pattern: PDA Bump Seed Canonicalization — Demonstrates bump grinding attacks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pda_bump"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
blake3 = "=1.5.5"
