[package]
name = "type-cosplay"
version = "0.1.0"
description = "Security Pattern: Type Cosplay (Account Confusion) — Demonstrates discriminator bypass attacks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
blake3 = "=1.5.5"
